s-config_kubernetes.yml
apiVersion: v1
kind: Service
metadata:
  name: s-blog-wordpress-service
  namespace: staging
  labels:
    run: s-blog-wordpress-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: s-blog-wordpress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s-blog-wordpress
  namespace: staging
spec:
  selector:
    matchLabels:
      run: s-blog-wordpress
  replicas: 2
  template:
    metadata:
      labels:
        run: s-blog-wordpress
    spec:
      containers:
      - image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:s-$BUILD_NUMBER
        name: s-blog-wordpress
        ports:
        - containerPort: 80
