config_kubernetes.yml
apiVersion: v1
kind: Service
metadata:
  name: p-blog-wordpress-service
  namespace: production
  labels:
    run: p-blog-wordpress-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: p-blog-wordpress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-blog-wordpress
  namespace: production
spec:
  selector:
    matchLabels:
      run: p-blog-wordpress
  replicas: 2
  template:
    metadata:
      labels:
        run: p-blog-wordpress
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: p-blog-wordpress
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: p-ingress
  namespace: production
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: blog.wibi.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: p-blog-wordpress-service
              servicePort: 80
